--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
 
     <link href="css/fa-css/fontawesome.css" rel="stylesheet">
 
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     
 
     <script src="https://kit.fontawesome.com/5d3c8adf66.js" crossorigin="anonymous"></script>
+
+   
 </head>
 <body>
 
     <header  id="home">
         <div class="container-header">
             <div class="header-bar" >
-                <div class="logo animate__animated animate__backInLeft"><a href="#">prepravanakladu<span>.sk</span> </a> </div>
+                <div class="logo animate__animated animate__backInLeft"><a href="index.html">prepravanakladu<span>.sk</span> </a> </div>
                 <div class="hamburger">&#9776; </div>
 
                 <nav class="nav-bar animate__animated animate__backInRight">
@@ -140,6 +139,9 @@
                 <a href="img/hardox/img2.JPG" style="display:none;" class="card-button material-bubble" data-lightbox="hardox" data-title="Súprava s hardox návesom">
                     Galéria
                 </a>
+                <a href="img/hardox/img3.JPG" style="display:none;" class="card-button material-bubble" data-lightbox="hardox" data-title="Súprava s hardox návesom">
+                    Galéria
+                </a>
             </section>
 
             <section class="card">
@@ -167,6 +169,12 @@
                     Galéria
                 </a>
                 <a href="img/3s_vyklapac/img6.JPG" style="display:none;" class="card-button material-bubble" data-lightbox="natahovac" data-title="Trojstranný vyklápač s hydraulickou rukou a naťahovač kontajnerov">
+                    Galéria
+                </a>
+                <a href="img/3s_vyklapac/img7.JPG" style="display:none;" class="card-button material-bubble" data-lightbox="natahovac" data-title="Trojstranný vyklápač s hydraulickou rukou a naťahovač kontajnerov">
+                    Galéria
+                </a>
+                <a href="img/3s_vyklapac/img8.JPG" style="display:none;" class="card-button material-bubble" data-lightbox="natahovac" data-title="Trojstranný vyklápač s hydraulickou rukou a naťahovač kontajnerov">
                     Galéria
                 </a>
             </section>
@@ -227,13 +235,17 @@
                     </section>
                     <section class="contact-right">
                         <h4>Zavolajte nám!</h4>
-                        <p><i class="fa fa-phone"></i><a href="tel:0910123456">0910 123 456</a></p>
+                        <p>
+                            <i class="fa fa-phone"></i><a class="phone" href="tel:0905402503">0905 402 503</a>,
+                            <a class="phone" href="tel:0907601890">0907 601 890</a>
+                        </p>
                         <h4>Napíšte nám!</h4>
                         <p><i class="fa fa-envelope"></i><a href="mailto:prepravanakladu@gmail.com">prepravanakladu@gmail.com</a></p>
                         <h4>Kde nás nájdete?</h4>
-                        <p><i class="fa fa-location-dot"></i>Michalovce</p>
+                        <p><i class="fa fa-location-dot"></i>Michalovce-Topoľany</p>
                     </section>
                </div>
+               <a id="pp" href="prepravnyporiadok.pdf">Prepravný poriadok</a>
                 
             </div>
         </div>
@@ -241,6 +253,16 @@
             Všetky práva vyhradené. © 2023 prepravanakladu.sk <br> Webdesign by Štefan Kopecký
         </div>
     </footer>
+
+    <div class="cookie-container">
+        <p>
+            Na našej webovej stránke používame súbory cookies. Prezeraním našej webovej stránky súhlasíte s ich používaním a ukladaním do Vášho prehliadača. <a href="cookie-policies.html">Viac informácií</a>
+        </p>
+
+        <button class="cookie-btn">
+            Rozumiem
+        </button>
+    </div>
 
     <script src="js/main.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
